...

const form = 'login_form'

const LoginContainer = compose(
  withState('loading', 'setLoading', false),
  withState('registered', 'setRegistered', true),
  withState('buttonText', 'setButtonText', 'Login'),
  withState('loadingText', 'setLoadingText', 'Logging in ...'),
  withState(
    'alternateButtonText',
    'setAlternateButtonText',
    'Not yet registered?',
  ),
  withHandlers({
    loginUser: props => (email, password) => {
      const { app, setLoading } = props
      app
        .authenticate({
...
